objects/cnx__Connects_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>cnx__Redial_List_Size__c</fullName>
        <defaultValue>20</defaultValue>
        <description>Sets the maximal number of calls displayed in the redial list.</description>
        <inlineHelpText>Sets the maximal number of calls displayed in the redial list.</inlineHelpText>
        <label>Redial List Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Screen_Pop_for_Call_Events__c</fullName>
        <inlineHelpText>With this Configuration you&apos;re able to add different Screen-Pop Types. You can configure if a Screen-Pop gets triggered based on the channel, the direction and the event on an item. Some Directions and Events are only available for the Voice channel.</inlineHelpText>
        <label>Screen Pop for Call Events</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Search_and_Screen_Pop_Variable__c</fullName>
        <inlineHelpText>The expression that is searched for in the Salesforce database on inbound calls</inlineHelpText>
        <label>Search and Screen Pop Variable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Service_Presence_Busy_Status__c</fullName>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Service_Presence_Busy_Status_v2__c</fullName>
        <inlineHelpText>Defines the states which will be displayed as Busy in the gadget.</inlineHelpText>
        <label>Service Presence Busy Status</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Service_Presence_Online_Status__c</fullName>
        <inlineHelpText>This field is deprecated and should not be used.</inlineHelpText>
        <label>deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Service_Presence_Online_Status_v2__c</fullName>
        <inlineHelpText>Defines the states which will be displayed as Online in the gadget.</inlineHelpText>
        <label>Service Presence Online Status</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Service_Presence_Status_While_Talking__c</fullName>
        <inlineHelpText>Defines the status the agent automatically will switch to, during a call.</inlineHelpText>
        <label>Service Presence Status While Talking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Show_Call_Log_Comment_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If set to true, the call activity section is extended with an activity note field.</inlineHelpText>
        <label>Show Call Log Comment Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Show_Supervisor_Monitoring_to_Agent__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If set to true, agents see an eye icon if they are being supervised.</inlineHelpText>
        <label>Show Supervisor Monitoring to Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Shown_Team_Message_Lines__c</fullName>
        <inlineHelpText>Choose how many lines of the team message are displayed.</inlineHelpText>
        <label>Shown Team Message Lines</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                    <default>true</default>
                    <label>Header</label>
                </value>
                <value>
                    <fullName>One Line</fullName>
                </value>
                <value>
                    <fullName>Two Lines</fullName>
                </value>
                <value>
                    <fullName>Three Lines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Softphone_Height__c</fullName>
        <defaultValue>500</defaultValue>
        <inlineHelpText>Initial softphone height</inlineHelpText>
        <label>Softphone Height</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Softphone_Width__c</fullName>
        <defaultValue>300</defaultValue>
        <inlineHelpText>Initial softphone width</inlineHelpText>
        <label>Softphone Width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Support_Chat_Button_State__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting has to be checked in order to switch the chat button to offline, if all agents are talking or on full capacity.</inlineHelpText>
        <label>Support Chat Button State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Switch_to_Talking_State_on_Reserved__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If set to true the state will be switched to the talking state when an incoming call is received.</inlineHelpText>
        <label>Switch to Talking State on Reserved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Types_To_Include_In_Directory_Lookup__c</fullName>
        <defaultValue>&quot;User;Lead;Contact;Account;AdditionalNumber&quot;</defaultValue>
        <label>Types To Include In Directory Lookup</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>AdditionalNumber</fullName>
                    <label>Additional Number</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Use_Legacy_Media_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required for CCE 11.0 or older.</inlineHelpText>
        <label>Use Legacy Cisco Universal Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Variable_for_Record_Sharing__c</fullName>
        <defaultValue>&quot;PV10&quot;</defaultValue>
        <inlineHelpText>The peripheral variable (PV1-PV10) or ECC variable that is used to transport shared record information to the
        consulted agent.</inlineHelpText>
        <label>Variable for Record Sharing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Voice_New_Record_URL__c</fullName>
        <defaultValue>&quot;[{\&quot;key\&quot;: \&quot;\&quot;, \&quot;value\&quot;: \&quot;00Q/e?Phone={ANI}\&quot;},{\&quot;key\&quot;: \&quot;\&quot;, \&quot;value\&quot;: \&quot;001/e?Phone={ANI}\&quot;},{\&quot;key\&quot;: \&quot;\&quot;, \&quot;value\&quot;: \&quot;003/e?Phone={ANI}\&quot;}]&quot;</defaultValue>
        <inlineHelpText>New Record URLs are displayed on incoming calls. These configuration settings are used for enabling and configuring these links.</inlineHelpText>
        <label>New Record URLs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnx__Work_Item_Id_Variable__c</fullName>
        <inlineHelpText>Variable used to transfer the Salesforce work item ID with the Routing Adapter</inlineHelpText>
        <label>Work Item Id Variable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>b+s Configuration</label>
    <listViews>
        <fullName>cnx__All</fullName>
        <columns>NAME</columns>
        <columns>cnx__Is_Default__c</columns>
        <columns>cnx__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cnx__ViewAllConfigurations</fullName>
        <columns>NAME</columns>
        <columns>cnx__Description__c</columns>
        <columns>cnx__Deployment_Type__c</columns>
        <columns>cnx__Is_Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>View All Configurations</label>
    </listViews>
    <nameField>
        <label>b+s Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>b+s Configurations</pluralLabel>
    <recordTypes>
        <fullName>cnx__Model_S</fullName>
        <active>true</active>
        <label>Model S</label>
    </recordTypes>
    <recordTypes>
        <fullName>cnx__Salesforce_Omni_Channel</fullName>
        <active>true</active>
        <label>Salesforce Omni-Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>cnx__Universal_Queue</fullName>
        <active>true</active>
        <label>Cisco Universal Queue</label>
    </recordTypes>
    <recordTypes>
        <fullName>cnx__Universal_Queue_Legacy</fullName>
        <active>true</active>
        <label>Cisco Universal Queue (Legacy)</label>
    </recordTypes>
    <recordTypes>
        <fullName>cnx__Voice_Only</fullName>
        <active>true</active>
        <label>Voice Only</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>